<resources>
    <string name="app_name">Autochek Assessment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart_button">Cart</string>
    <string name="label_explore">Explore</string>
    <string name="label_search">Search</string>
    <string name="label_car_detail">Car Detail</string>
    <string name="label_interested">Interested</string>
    <string name="label_vehicle_information">Vehicle Information</string>
    <string name="label_engine_type">Engine Type</string>
    <string name="label_transmission">Transmission</string>
    <string name="label_fuel_type">Fuel Type</string>
    <string name="label_interior_color">Interior Color</string>
    <string name="label_exterior_color">Exterior Color</string>
    <string name="label_vin">Vin</string>
    <string name="label_vehicle_id">Vehicle ID</string>
    <string name="label_request_financing">Request Financing</string>
    <string name="label_i_am_interested">I am interested</string>
    <string name="label_retrieving_data">Retrieving Data</string>
    <string name="label_media_title">Media</string>
    <string name="label_click_to_play">Click to play</string>
    <string name="label_view_media">View Media</string>
    <string name="label_key_features">Key Features</string>
    <string name="label_empty_media">No media available for this car</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_back">Back</string>
</resources>